# MeshGen_UI

./: .gitignore  Makefile  README.md  error.txt
EasyMesh/: README.md
EasyMesh/Src/: Easy  Makefile  easymesh.cpp  easymesh.h  easymesh_help.cpp  easymesh_parse.cpp  easymesh_save.cpp  options.h  (+2 more)
mesh_gui/: Cargo.toml
mesh_gui/src/: app.rs  main.rs  templates.rs
mesh_gui/src/runner/: easymesh_builder.rs  easymesh_runner.rs  mod.rs  structured_runner.rs
mesh_gui/src/state/: easymesh.rs  mod.rs  project.rs  structured.rs
mesh_gui/src/ui/: easymesh_panel.rs  engine_selector.rs  log_panel.rs  mod.rs  output_panel.rs  structured_panel.rs  validation.rs
structured_mesh/: Cargo.toml  README.md
structured_mesh/examples/01_unit_square/: README.md  geometry.txt
structured_mesh/examples/02_l_shaped_domain/: README.md  geometry.txt
structured_mesh/examples/03_square_with_hole/: README.md  geometry.txt
structured_mesh/examples/04_backward_facing_step/: README.md  geometry.txt
structured_mesh/examples/05_regular_hexagon/: README.md  geometry.txt
structured_mesh/examples/06_rectangle_two_holes/: README.md  geometry.txt
structured_mesh/examples/07_c_channel/: README.md  geometry.txt
structured_mesh/examples/08_swiss_cheese/: README.md  geometry.txt
structured_mesh/examples/09_two_bodies/: README.md  geometry.txt
structured_mesh/examples/10_nested_domains/: Polygon_project.txt  README.md  geometry.txt
structured_mesh/src/: error.rs  geometry_core.rs  input_parser.rs  lib.rs  main.rs  output_tecplot.rs  output_text.rs  output_vtk.rs  scanline_rasterizer.rs
