[package]
name = "meshgen_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe      = "0.31"
egui_extras = { version = "0.31" }
rfd         = "0.15"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"
thiserror   = "1"
structured_mesh = { path = "../structured_mesh" }

[dev-dependencies]
tempfile = "3"
